# live-code-studio

./: .gitignore  AGENTS.md  Dockerfile  README.md  openapi.yaml  package-lock.json  package.json  render.yaml  sql_app.db
.github/workflows/: ci-cd.yml
backend/: README.md  database.py  executor.py  main.py  models.py  pyproject.toml
backend/tests/: test_api.py
backend/tests_integration/: test_auth.py  test_integration.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  InterviewHeader.tsx  LanguageSelector.tsx  OutputPanel.tsx
frontend/src/components/ui/: button.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useInterviewSession.ts
frontend/src/pages/: Index.tsx  InterviewRoom.tsx  Login.tsx  Signup.tsx
frontend/src/types/: interview.ts
frontend/src/utils/: codeExecutor.ts
